--- a/devops/도커장고테스트2.md
+++ b/devops/도커장고테스트2.md
@@ -22,6 +22,10 @@ $script = <<SCRIPT
   mkdir gocker && cd gocker
   chmod 666 /var/run/docker.sock
   git clone https://github.com/coconutstd/lecture_review_site.git
+  cd lecture_review_site
+  docker image build -t dlalsdyd094/dogo
+  docker run -p 8000:8000 -idt dlalsdyd094/dogo
+  
 SCRIPT
 
 ```
