--- a/java/0102 사전학습 4.md
+++ b/java/0102 사전학습 4.md
@@ -27,3 +27,204 @@ private 변수에 저장하는 setxxx()메서드...setter
 이클립스에서의 toString() 메서드 자동 구현
 
 똑같이 generate tostring() 선택. 생성된 객체의 상태를 쉽게 확인 가능.
+
+
+
+
+
+
+
+# 클래스 변수
+
+static 예약어의 유무에 따라서
+
+있는 경우 **인스턴스 변수**
+
+* 생성된 인스턴스마다 그 안에 클래스의 인스턴스에 변수들이 포함됨.
+
+* 일반적인 멤버 변수를 인스턴스 변수라고 부름.
+
+
+
+없는 경우 **클래스 변수**
+
+* 클래스로부터 생성된 인스턴스에 포함되지 않는 변수
+
+* 많은 인스턴스를 생성하더라도 메모리에 하나의 변수만 존재함.
+
+* 객체를 생성하지 않고도 접근할 수 있는 변수
+
+
+
+
+
+여러 객체가 동일한 값을 가지고 있을 때, 인스턴스 변수로 생성하게되면
+
+각 객체에 동일한 값을 가지는 인스턴스 변수가 포함되므로 메모리 관리에 좋지 않다.
+
+
+
+```
+클래스 변수 사용 경우
+class Employee{
+	String name;
+	int age;
+	static String companyName='L전자';
+}
+
+public class EmployeeTest{
+	publci static void main(String[] args){
+		Employee kim = new Employee();
+		kim.name="김민수";
+		kim.age=45;
+		
+	}
+}
+```
+
+```
+인스턴스 변수 사용 경우
+class Employee{
+	String name;
+	int age;
+	String companyName;
+}
+
+public class EmployeeTest{
+	publci static void main(String[] args){
+		Employee kim = new Employee();
+		kim.name="김민수";
+		kim.age=45;
+		kim.companyName='L전자';
+		
+	}
+}
+```
+
+companyName이 동일한 경우, 인스턴스 변수는 비효율적!
+
+
+
+클래스 변수는 일반적으로 , 객체 생성없이도 접근이 가능하다.
+
+메서드에서도 static예약어를 사용가능하다.
+
+일반 메서드를 클래스 메서드로 선언하면, 인스턴스를 생성하지 않고도 사용가능하다.
+
+대표적 클래스 메서드로는 integer클래스의 parseInt 메서드이다.
+
+클래스 메서드는 일반 인스턴스 변수를 참조할 수 없다.
+
+= 클래스 메서드에서는 클래스 메서드만 호출 할 수 있따
+
+
+
+```java
+class Dice{
+	public static int dotCount=5;
+	public int rollingCount=0;
+
+	public static void playGame(){
+		dotCount++;   // 클래스 변수로 선언된 dotCount변수는 playGame메서드에서 접근가능.
+		rollingCount++; // 인스턴스 변수로 선언된 rollingCount변수는 클래스 변수접근 불가능
+		System.out.println("생성숫자: "+rollingDice());
+        // 일반 메서드로 선언된 rollingDice()메서드는 클래스 메서드인 playGame()메서드에서 호출 불가.
+	}
+	
+	public int rollingDice(){
+		int generatedNum=(int)(Math.random()*6)+1;
+		return generatedNum
+	}
+}
+```
+
+
+
+
+
+# final
+
+final 예약어가 붙은 변수는 단한번 초기화가 가능하지만, 이후에는 변경할 수 없는 상수이다.
+
+회사명과 같이 변경되지않는 동일한 변수는,final로 선언해준다 .
+
+대문자와 '_'로 구분해준다.
+
+
+
+메서드에서 final이 붙은 경우, 상속을 받게되면 오버라이딩이 불가능하다.
+
+=상속을 금지하는 의미.
+
+```
+final class Car{
+	int speed;
+}
+
+class Taxi extends Car{
+	int currentiOil;
+}
+-> 부모클래스인 car클래스는 final클래스로 선언하였기 때문에, 자식 클래스를 갖지 못한다. car클래스를 상속하여 구현하려면 에러가 발생한다.
+```
+
+
+
+
+
+## abstract
+
+
+
+추상 메서드/ 추상 클래스 선언시 사용되는 modifier
+
+### 추상 메서드
+
+추상메서드를 선언할 때에는 abstract를 메서드 앞에 붙여야함.
+
+메서드의 구체적이 ㄴ행위를 표현하는 블록 부분을 생략함.
+
+리턴 타입, 메서드명 매개변수가 선언되어있어 기본적 기능 유추 가능.
+
+
+
+```
+abstract int sum(int num1, int num2);
+```
+
+
+
+### 추상 클래스
+
+추상 클래스와 상속이 결합되어야 정확하게 추상 클래스를 이해할 수 있음.
+
+
+
+
+
+## 생성자 new
+
+
+
+생성자를 추가하지 않으면, 객체를 생성할 때 new 객체(변수);와 같이 가능하다.
+
+하지만 클래스 내에 생성자를 만들어주면, 해당하는 값을 자동으로 넣어줄 수 있다?
+
+this의 의미.
+
+멤버 변수 이름과 클래스의 매개변수 이름이 같으면 문제가 발생한다.
+
+
+
+```
+public class employee{
+	String name;
+	int number;
+	
+	public employee(string name, int number){
+		this.name=name; this.name은 현재 생서된 객체의 멤버변수를 의미한다. 뒤의 name은 메서드의 매개변수.
+		this.number=number;
+	}
+	
+}
+```
+
