--- a/boj/0125.md
+++ b/boj/0125.md
@@ -10,7 +10,7 @@
 
 2557
 
-```
+```java
 public class Main{
     public static void main(String[] args){
         System.out.println("Hello World!");
@@ -20,7 +20,7 @@ public class Main{
 
 10718
 
-```
+```java
 public class Main{
     public static void main(String[] args){
         System.out.println("강한친구 대한육군");
@@ -31,7 +31,7 @@ public class Main{
 
 10171
 
-```
+```java
 public class Main{
     public static void main(String[] args){
         System.out.println("\\    /\\");
@@ -44,7 +44,7 @@ public class Main{
 
 10172
 
-```
+```java
 public class Main{
     public static void main(String[] args){
         System.out.println("|\\_/|");
@@ -58,7 +58,7 @@ public class Main{
 
 1000
 
-```
+```java
 import java.util.Scanner;
 public class Main{
     public static void main(String[] args){
@@ -72,7 +72,7 @@ public class Main{
 
 1001
 
-```
+```java
 import java.util.Scanner;
 public class Main{
     public static void main(String[] args){
@@ -86,7 +86,7 @@ public class Main{
 
 10998
 
-```
+```java
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.io.IOException;
@@ -102,7 +102,7 @@ public class Main{
 
 1008
 
-```
+```java
 import java.util.Scanner;
 public class Main {
     public static void main(String[] args) {
@@ -117,7 +117,7 @@ public class Main {
 
 10869
 
-```
+```java
 import java.util.Scanner;
 public class Main{
     public static void main(String[] args){
@@ -135,7 +135,7 @@ public class Main{
 
 10430
 
-```
+```java
 import java.util.Scanner;
 public class Main{
     public static void main(String[] args){
@@ -154,7 +154,7 @@ public class Main{
 
 2588
 
-```
+```java
 import java.util.Scanner;
 public class Main{
     public static void main(String[] args){
@@ -179,7 +179,7 @@ public class Main{
 
 1330
 
-```
+```java
 import java.util.Scanner;
 
 public class Main {
@@ -204,7 +204,7 @@ public class Main {
 
 9498
 
-```
+```java
 import java.util.Scanner;
 //시험 점수를 입력받아 90 ~ 100점은 A, 80 ~ 89점은 B, 70 ~ 79점은 C, 60 ~ 69점은 D, 나머지 점수는 F를 출력하는 프로그램을 작성하시오.
 
@@ -236,7 +236,7 @@ public class Main {
 
 2753
 
-```
+```java
 import java.util.Scanner;
 
 public class Main {
@@ -292,7 +292,7 @@ public class Main {
 
 2884
 
-```
+```java
 import java.util.Scanner;
 
 public class Main {
