--- a/boj/0126.md
+++ b/boj/0126.md
@@ -31,7 +31,7 @@ public class Main{
 
 2439
 
-```
+```java
 import java.util.Scanner;
 public class Main{
     public static void main(String[] args){
@@ -54,7 +54,7 @@ public class Main{
 
 2438
 
-```
+```java
 import java.util.Scanner;
 public class Main{
     public static void main(String[] args){
@@ -93,7 +93,7 @@ public class Main{
 
 **15552** 
 
-```
+```java
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
