--- a/boj/0127.md
+++ b/boj/0127.md
@@ -32,3 +32,221 @@ public class Main{
 }
 ```
 
+
+
+#### 10952
+
+```java
+import java.util.Scanner;
+public class Main{
+    public static void main(String[] args){
+        Scanner sc=new Scanner(System.in);
+        while(true){
+            int a=sc.nextInt();
+            int b=sc.nextInt();
+            if(a==b&&a==0){
+                return;
+            }else
+            {
+                System.out.println((a+b));
+            }
+        }
+    }
+
+}
+```
+
+
+
+#### 10951 : 다음 입력이 있는지 확인 Scanner.hasNextInt()
+
+```java
+import java.util.Scanner;
+public class Main{
+    public static void main(String[] args){
+        Scanner sc=new Scanner(System.in);
+        while(sc.hasNextInt()){
+            int a=sc.nextInt();
+            int b=sc.nextInt();
+
+  			 System.out.println((a+b));
+            
+        }
+    }
+
+}
+```
+
+
+
+#### 10818
+
+```java
+import java.util.Scanner;
+public class Main{
+    public static void main(String[] args){
+        Scanner sc=new Scanner(System.in);
+        int max=-1;
+        int min=Integer.MAX_VALUE;
+        int n=sc.nextInt();
+        for(int i=0;i<n;i++){
+            int temp=sc.nextInt();
+            if(temp>max)max=temp;
+            if(temp<min)min=temp;
+        }
+         System.out.println(min+" "+max);
+            
+        }
+    }
+
+}
+```
+
+
+
+#### 2562
+
+```java
+import java.util.Scanner;
+public class Main{
+    public static void main(String[] args){
+        Scanner sc=new Scanner(System.in);
+        int cnt=0;
+        int max=-1;
+        for(int i=0;i<9;i++){
+            int temp=sc.nextInt();
+            if(temp>max)
+            {
+                max=temp;
+                cnt=i+1;         
+            }      
+        }
+         System.out.println(max+"\n"+cnt);          
+        }
+}
+```
+
+
+
+#### 2577
+
+```java
+import java.util.Scanner;
+public class Main{
+    public static void main(String[] args){
+        Scanner sc=new Scanner(System.in);
+           int a,b,c;
+           a=sc.nextInt();
+        b=sc.nextInt();
+        c=sc.nextInt();
+        int result=a*b*c;
+        int[] arr=new int[10];
+        while(result>10){
+            int temp=result%10;
+            result=result/10;
+            arr[temp]++;
+        }
+        arr[result]++;
+        
+        for(int i=0;i<10;i++){
+         System.out.println(arr[i]);   
+        }   
+            
+        }
+}
+```
+
+
+
+#### 10818
+
+```java
+import java.util.Scanner;
+public class Main{
+    public static void main(String[] args){
+        Scanner sc=new Scanner(System.in);
+        
+        
+        int max=-1000000;
+        int min=1000000;
+        int n=sc.nextInt();
+        for(int i=0;i<n;i++){
+            int temp=sc.nextInt();
+            if(temp>max)max=temp;
+            if(temp<min)min=temp;
+        }
+         System.out.println(min+" "+max);
+            
+        }
+    }
+
+```
+
+
+
+#### 3052
+
+```java
+import java.util.Scanner;
+public class Main{
+    public static void main(String[] args){
+        Scanner sc=new Scanner(System.in);
+        int[] answer=new int[42];
+        for(int i=0;i<10;i++){
+            int temp=sc.nextInt();
+            answer[temp%42]++;
+        }
+        
+       
+        int cnt=0;
+        for(int i=0;i<42;i++){
+            if(answer[i]!=0){
+                cnt++;
+            }
+        }
+          System.out.println(cnt);  
+        }
+    }
+
+```
+
+
+
+#### 8958
+
+```java
+import java.util.Scanner;
+
+public class Main {
+	public static void main(String[] args) {
+		Scanner sc = new Scanner(System.in);
+
+		int n = sc.nextInt();
+		for (int i = 0; i < n; i++) {
+			String s = sc.next();
+			int cnt = 1;
+			int sum = 0;
+			boolean flag = false;
+			for (int j = 0; j < s.length(); j++) {
+				if (s.charAt(j) == 'O') {
+					if (flag) {
+						sum += ++cnt;
+						flag = true;
+					} else {
+						sum += cnt;
+						flag = true;
+					}
+
+				} else {
+					flag = false;
+					cnt=1;
+				}
+			}
+			System.out.println(sum);
+		}
+
+	}
+}
+
+```
+
