--- a/boj/0128.md
+++ b/boj/0128.md
@@ -34,3 +34,48 @@ public class Main{
 }
 ```
 
+
+
+### 1546
+
+```java
+import java.util.Scanner;
+public class Main{
+    
+    public static void main(String[] args){
+        Scanner sc=new Scanner(System.in);
+        int n=sc.nextInt();
+        int[] arr=new int[n];
+        int max=-1;
+        for(int i=0;i<n;i++){
+            
+           arr[i]=sc.nextInt();
+           if(max<arr[i])max=arr[i];
+        }
+        double sum=0;
+        for(int i=0;i<n;i++){
+            sum+=((double)arr[i]/(double)max*100);
+        }
+        System.out.printf("%f",sum/n);
+    }
+    
+}
+```
+
+
+
+### 15596
+
+```java
+public class Test {
+    long sum(int[] a) {
+        long ans = 0;
+        for(int i=0;i<a.length;i++){
+            ans+=a[i];
+        }
+        return ans;
+    }
+}
+
+```
+
