--- a/boj/0201.md
+++ b/boj/0201.md
@@ -162,3 +162,145 @@ public class SWEA_1859 {
 
 ```
 
+
+
+### 1926 SWEA : 개선방안이 있을 것
+
+```JAVA
+package SWEA;
+
+import java.util.Scanner;
+
+public class SWEA_1926 {
+	
+	
+	public static void main(String[] args) {
+		
+		Scanner sc=new Scanner(System.in);
+		
+		int n=sc.nextInt();
+		
+		for(int i=1;i<=n;i++) {
+			
+			if(i<10) {
+				if(i%3==0) {
+					System.out.print("-"+" ");
+				}else {
+					System.out.print(i+" ");
+				}
+				
+			}else if(i<100) {
+				String str="";
+				if( (i/10)%3==0 ) {
+					str+="-";
+				}
+				
+				if( (i%10)!=0 && (i%10)%3==0  ) {
+					str+="-";
+				}
+				
+				if(str.length()!=0) {
+					System.out.print(str+" ");
+				}else {
+					System.out.print(i+" ");
+				}
+				
+				
+			}else {
+				int a,b,c;
+				int cnt=0;
+				a=i/100;
+				b=(i/10)%10;
+				c=i%10;
+				if(c%3==0&&(i%10)!=0)cnt++;
+				if(b%3==0&&(i/10)%10!=0)cnt++;
+				if(a%3==0)cnt++;
+				
+				if(cnt==0) {
+					System.out.print(i+" ");
+				}else {
+					String str="";
+					for(int k=0;k<cnt;k++) {
+						str+="-";
+					}
+					System.out.print(str+" ");
+				}
+				
+				
+				
+			}
+			
+			
+		}
+		
+	}
+}
+
+```
+
+#### 남의 코드 (시간 절반)
+
+```JAVA
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+ 
+public class Solution{
+    public static void main(String[] args)throws IOException{
+        BufferedReader br=new BufferedReader(new InputStreamReader(System.in));
+        int tc=Integer.parseInt(br.readLine());
+        StringBuilder sb=new StringBuilder();
+        for(int i=1;i<=tc;i++) {
+            sb.append(calculator(i)+" ");
+        }
+        System.out.println(sb);
+    }
+    public static String calculator(int n) {
+        int count=0;
+        int num=n;
+        String str="";
+        for(;num>0;) {
+            int t=num%10;
+            num/=10;
+            if((t>0) && (t%3==0)) {
+                count++;
+                str+="-";
+            }
+        }
+        return (count==0) ? Integer.toString(n):str;
+    }
+     
+```
+
+
+
+
+
+###  2007 패턴 마디의 길이
+
+```java
+package SWEA;
+
+import java.util.Scanner;
+
+public class SWEA_2007 {
+	public static void main(String[] args) {
+		Scanner sc=new Scanner(System.in);
+		int n=sc.nextInt();
+		for(int i=1;i<=n;i++) {
+			String str=sc.next();
+			
+			for(int j=1;j<str.length();j++) {
+				String temp=str.substring(0, j);
+				if(temp.equals(str.substring(j,j+temp.length()))) {
+					System.out.println("#"+i+" "+temp.length());
+					break;
+				}
+			}
+		}
+		
+	}
+}
+
+```
+
