--- a/boj/0202.md
+++ b/boj/0202.md
@@ -90,3 +90,138 @@ public class SWEA_2005 {
 	}
 ```
 
+
+
+
+
+### SWEA 1954 달팽이숫자 : 벽이나 0이 아닌 숫자를 만나면 방향전환(right-down-left-up순으로)
+
+#### Test case마다 dir 초기화 시켜줄것.
+
+```JAVA
+import java.util.Arrays;
+import java.util.Scanner;
+
+/*
+ * 나의 설계.
+ * 0행에서 오른쪽방향을 0으로 놓고, 벽이나 채워진 숫자칸을 만나면 다음 방향으로 보내는 것으로..
+ * 
+ * 
+ * */
+
+public class Solution {
+	static int dir = 0;
+	static int[] dx = { 1, 0, -1, 0 };
+	static int[] dy = { 0, 1, 0, -1 };
+
+	public static void main(String[] args) {
+		Scanner sc = new Scanner(System.in);
+
+		int TC = sc.nextInt();
+
+		for (int T = 1; T <= TC; T++) {
+            dir=0;
+			int n = sc.nextInt();
+			int[][] arr = new int[n][n];
+			int y = 0, x = 0;
+			for (int i = 1; i <= n * n; i++) {
+				arr[y][x] = i;
+				int ny = y + dy[dir];
+				int nx = x + dx[dir];
+				if (ny >= 0 && nx >= 0 && ny < n && nx < n && arr[ny][nx] == 0) {
+					y = ny;
+					x = nx;
+					continue;
+				} else {
+
+					dir = (dir + 1) % 4;
+					y = y + dy[dir];
+					x = x + dx[dir];
+				}
+			}
+			System.out.println("#"+T);
+			for(int p=0;p<n;p++) {
+				for(int k=0;k<n;k++) {
+				System.out.print(arr[p][k]+" ");
+				}
+				System.out.println();
+			}
+		}
+	}
+}
+
+```
+
+
+
+### SWEA 사다리 : 아래에서 시작하면 필요없는 연산을 줄일 수 있다.
+
+#### 문제를 제대로 읽자..
+
+```JAVA
+package ssafy_algo;
+
+import java.io.BufferedReader;
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.InputStreamReader;
+
+public class Day2_SWEA_LADDER {
+	static int ladder[][] = new int[100][100];
+	static boolean find = false;
+	final static int size=100;
+	final static int test_case=10;
+
+	public static void main(String[] args) throws IOException {
+		System.setIn(new FileInputStream("input5.txt"));
+		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+
+		for (int T = 0; T < test_case; T++) {
+			br.readLine();
+
+			int[][] arr = new int[size][size];
+			int y=99,x=0;
+			//입력받기
+			for (int r = 0; r < size; r++) {
+				String[] str = br.readLine().split(" ");
+				for (int c = 0; c < size; c++) {
+					arr[r][c]=Integer.parseInt(str[c]);
+				}
+			}
+					
+			
+			for(int i=0;i<size;i++) {
+				// 2에서부터 올라간다.
+				if(arr[99][i]==2) {
+					x=i;
+					break;
+				}
+			}
+			
+			
+			while(y>0) {
+				
+				if(x>0&&arr[y][x-1]==1) {
+					//왼쪽
+					x--;
+					
+				}else if(x<99&&arr[y][x+1]==1) {
+					//오른쪽
+					x++;
+					
+				}else {
+					//위로
+					y--;
+				}
+				arr[y][x]=0;
+				
+			}
+			System.out.println("#"+test_case+" "+x);
+		
+
+		}
+
+	}
+}
+```
+
