--- a/boj/0202.md
+++ b/boj/0202.md
@@ -225,3 +225,79 @@ public class Day2_SWEA_LADDER {
 }
 ```
 
+
+
+### SWEA 2001 파리퇴치
+
+```JAVA
+
+import java.util.Scanner;
+
+public class Solution {
+	public static void main(String[] args) {
+		Scanner sc=new Scanner(System.in);
+		int test_case=sc.nextInt();
+		
+		for(int T=0;T<test_case;T++) {
+			
+			
+			int n=sc.nextInt();
+			int m=sc.nextInt();
+			int[][] arr=new int[n][n];
+			for(int i=0;i<n;i++) {
+				for(int j=0;j<n;j++) {
+					arr[i][j]=sc.nextInt();
+				}
+			}
+			
+			int max=-1;
+			for(int i=0;i<=n-m;i++) {
+				for(int j=0;j<=n-m;j++) {
+					int sum=0;
+					for(int k=0;k<m;k++) {
+						for(int l=0;l<m;l++) {
+							sum+=arr[i+k][j+l];
+						}
+					}
+					if(sum>max)max=sum;
+				}
+			}
+			
+			System.out.println("#"+(T+1)+" "+max);
+		}
+	}
+}
+```
+
+
+
+### 2007 : 패턴 맞추기 : readLine을 조심하자.
+
+```java
+package SWEA;
+
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+
+public class SWEA_2007 {
+	public static void main(String[] args) throws  NumberFormatException,IOException {
+		BufferedReader br=new BufferedReader(new InputStreamReader(System.in));
+		int n=Integer.parseInt(br.readLine());
+		for(int i=1;i<=n;i++) {
+			String str=br.readLine();
+			
+			for(int j=1;j<str.length();j++) {
+				String temp=str.substring(0, j);
+				if(temp.equals(str.substring(j,j+temp.length()))) {
+					System.out.println("#"+i+" "+temp.length());
+					break;
+				}
+			}
+		}
+		
+	}
+}
+
+```
+
