--- a/boj/0203.md
+++ b/boj/0203.md
@@ -333,3 +333,137 @@ public class T09_2805_D3 {
 
 ```
 
+
+
+# SWEA 1989 초심자의 회문 검사
+
+```JAVA
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+
+public class Solution {
+	public static void main(String[] args) throws NumberFormatException, IOException {
+		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+
+		int num = Integer.parseInt(br.readLine());
+		for (int T = 1; T <= num; T++) {
+			char[] str = br.readLine().toCharArray();
+			int len = str.length;
+			int center = len / 2;
+			int answer=1;
+			if (len % 2 == 0) {
+				// 짝수인경우
+				int center2 = center - 1;
+				for (int i = 0; i <= center2; i++) {
+					if (str[center2-i] != str[center+i]) {
+						answer=0;
+						break;
+					}
+				}
+				
+
+			} else {
+				// 홀수인경우
+				for (int i = 1; i <= center; i++) {
+					if (str[center - i] != str[center + i]) {
+						answer=0;
+						break;
+					}
+				}
+			}
+			System.out.println("#"+T+" "+answer);
+
+		}
+	}
+}
+
+```
+
+
+
+
+
+
+
+
+
+# SWEA 1986 지그재그 숫자 : 세상에...
+
+```JAVA
+package SWEA;
+
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.util.Arrays;
+
+public class SWEA_1986 {
+	public static void main(String[] args) throws NumberFormatException, IOException {
+		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+		/*
+		 * int[] arr=new int[11]; for(int i=1;i<11;i++) { int number=i;
+		 * if(i%2==0)number*=-1; arr[i]=number+arr[i-1]; }
+		 * 
+		 * 
+		 * int num=Integer.parseInt(br.readLine()); for(int i=1;i<=num;i++) { int
+		 * N=Integer.parseInt(br.readLine()); System.out.println("#"+i+" "+arr[N]); }
+		 */
+        
+		// 배열을 구해놓고 더하면 더 빠르지않을까?
+        // 사실은 규칙이 있다. 근데 속도는 비슷했따. 96ms, 101ms정도
+		int N = Integer.parseInt(br.readLine());
+		for (int i = 1; i <= N; i++) {
+			int tar = Integer.parseInt(br.readLine());
+			if (i % 2 == 0)
+				System.out.println(tar / 2 * (-1));
+			else {
+				System.out.println((tar + 1) / 2);
+			}
+		}
+	}
+}
+
+```
+
+
+
+
+
+# SWEA 1984 중간 평균값 구하기
+
+```JAVA
+package SWEA;
+
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.util.Arrays;
+
+//중간 평균값 구하가ㅣ
+public class SWEA_1984 {
+	public static void main(String[] args) throws IOException {
+		BufferedReader br=new BufferedReader(new InputStreamReader(System.in));
+		int n=Integer.parseInt(br.readLine());
+		
+		for(int i=1;i<=n;i++) {
+			int sum=0;
+			int[] arr=new int[10];
+			String[] str=br.readLine().split(" ");
+			System.out.println(Arrays.toString(str));
+			for(int j=0;j<10;j++) {
+				arr[j]=Integer.parseInt(str[j]);
+			}
+			Arrays.sort(arr);
+			for(int j=1;j<9;j++) {
+				sum+=arr[j];
+			}
+			
+			long answer=Math.round((double)sum/8);
+			System.out.println("#"+i+" "+answer);
+		}
+	}
+}
+
+```
+
