--- a/boj/0204.md
+++ b/boj/0204.md
@@ -4,8 +4,13 @@
 
 #  1218 괄호짝짓기 - 스택 : 아스키코드활용
 
+
+
+### String str="(<{[", str.contains(stack.pop()) 을 사용하는 방법도 있다!!!
+
 ```java
 package ssafy_algo_0204;
+
 
 import java.io.BufferedReader;
 import java.io.IOException;
@@ -103,5 +108,143 @@ public class T11_1225 {
 	}
 }
 
+```
+
+
+
+
+
+# BOJ 2493 : 탑 - 스택문제 : 다시풀어보기
+
+```JAVA
+package ssafy_algo_0204;
+
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Stack;
+
+
+class Top{
+	int idx;
+	int value;
+	
+	public Top(int idx,int value) {
+		this.idx=idx;
+		this.value=value;
+	}
+}
+public class BOJ_2493 {
+	public static void main(String[] args) throws NumberFormatException, IOException {
+		BufferedReader br=new BufferedReader(new InputStreamReader(System.in));
+		int N=Integer.parseInt(br.readLine());
+		
+		
+		String[] str=br.readLine().split(" ");
+		int[] arr=new int[N];
+		for(int i=0;i<str.length;i++) {
+			arr[i]=Integer.parseInt(str[i]);
+		}
+		Stack<Top> stack=new Stack<>();
+		
+		List<Integer> list=new ArrayList<>();
+		for(int i=0;i<N;i++) {
+			while(!stack.empty()) {
+				if(stack.peek().value>=arr[i]) {
+					list.add(stack.peek().idx+1);
+					stack.push(new Top(i,arr[i]));
+					break;
+				}
+				else {
+					System.out.println(stack.pop().value);
+				}
+			}
+			if(stack.isEmpty()) {
+				list.add(0);
+				stack.push(new Top(i,arr[i]));
+			}
+		}
+		for(int index: list) {
+			System.out.print(index+" ");
+		}
+		
+
+	}
+}
+
+```
+
+
+
+# BOJ 5432 : 막대자르기 -스택
+
+
+
+```java
+package com.ssafy.AlgoPlus_0204;
+
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.util.Stack;
+
+/*
+
+조건 : 
+* 막대기는 아래것이 위를 포함하게만 가능!
+* 레이저는 반드시 존재
+
+( : 쇠막대기의 시작 or 레이저
+) : 쇠막대기의 끝, 레이저의 끝
+
+레이저 = )가 나왔을 때 idx-1 이 ( 여야한다.
+
+
+() ( ( ( () () ) ( () ) () ) ) ( () )
+    ~~~~~
+     레이저를 쏘면, 막대기가 열린 수만큼 잘라진다 !! 
+ 
+
+
+*/
+public class SWEA_5432 {
+	public static void main(String[] args) throws NumberFormatException, IOException {
+		BufferedReader br=new BufferedReader(new InputStreamReader(System.in));
+		int N=Integer.parseInt(br.readLine());
+		
+		for(int i=1;i<=N;i++) {
+			String str=br.readLine();
+			char[] arr=new char[str.length()];
+			for(int j=0;j<str.length();j++) {
+				arr[j]=str.charAt(j);
+			}
+			int sum=0;
+			Stack<Character> stack=new Stack<>();
+			for(int j=0;j<str.length();j++) {
+				if(arr[j]=='(')stack.push(arr[i]);
+				else if(arr[j]==')'&&arr[j-1]=='(') {
+					//레이저일때
+					//레이저이므로 전에 넣었떤 ( 를 빼준다
+					stack.pop();
+					//현재 겹쳐진 막대의수를 더해준다.
+					sum+=stack.size();
+					
+				}else if(arr[j]==')'&&arr[j-1]==')') {
+					//레이저가 아닌, 막대의 끝일 때
+					
+					//막대가 끝이 났으므로, 하나의 (를 빼준다.
+					stack.pop();
+					//잘려진 막대기 끝을 하나 더해준다.
+					sum+=1;
+				}
+			}
+			System.out.println("#"+i+" "+sum);
+		}
+		
+		
+	}
+}
 ```
 
