--- a/boj/0204.md
+++ b/boj/0204.md
@@ -206,6 +206,12 @@ import java.util.Stack;
     ~~~~~
      레이저를 쏘면, 막대기가 열린 수만큼 잘라진다 !! 
  
+ 
+ 1.데이터 입력
+ 2. 전체 문자열 수를 반복 돌면서 "(" 문자열이면 막대기 시작일 수 있으니 Stack에 추가
+ 3. ")" 
+  3-1. idx-1 == '(' 레이저인경우. '('를 하나 감소해준다.stack에 저장된 '('개수 만큼 잘라자ㅣㄹ 수 있으므로 cnt에 추가
+  3-2. idx-1 != '(' 막대기의 끝인경우. 잘라진 쇠막대기 1개를 cnt에 추가.
 
 
 */
