--- a/algorithm/0205.md
+++ b/algorithm/0205.md
@@ -165,3 +165,105 @@ public class SWEA_1861_TODO {
 }
 ```
 
+
+
+# BOJ 2231 분해합 : 효율성 구림
+
+```JAVA
+package ssafy_algo_0205;
+
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+
+//분해합
+public class BOJ_2231 {
+	public static void main(String[] args) throws IOException {
+		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+		String str=br.readLine();
+		int num=Integer.parseInt(str);
+		int answer=0;
+		for(int i=1;i<num;i++) {
+			// 1부터, 숫자 num까지 시작 값은 본인 자신.
+			
+			int sum=i;
+			String temp=Integer.toString(i);
+			
+			
+			for(int p=0;p<temp.length();p++) {
+				sum+=temp.charAt(p)-'0'; 
+				
+			}
+			
+			if(sum==num) {
+				answer=i;
+                break;
+			}
+			
+			
+		}
+        System.out.println(answer);
+		
+		
+	}
+}
+
+```
+
+
+
+
+
+# 2309 백설공주와 난장이
+
+```java
+package ssafy_algo_0205;
+
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.util.Arrays;
+
+public class BOJ_2309 {
+	static int[] arr;
+
+	static void Comb(int toSelect, int[] selected, int startIdx) {
+		if (toSelect == 7) {
+			int sum = 0;
+			for (int i = 0; i < 7; i++) {
+				sum += selected[i];
+			}
+			
+			if (sum == 100) {
+				Arrays.sort(selected);
+				for (int i = 3; i < 10; i++) {
+					System.out.println(selected[i]);
+
+				}
+				arr=new int[10];
+				return;
+
+			}
+			return;
+		}
+
+		for (int i = startIdx; i < 9; i++) {
+
+			selected[toSelect] = arr[i];
+			Comb(toSelect + 1, selected, i + 1);
+		}
+
+		return;
+	}
+
+	public static void main(String[] args) throws NumberFormatException, IOException {
+		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+		arr = new int[9];
+		for (int i = 0; i < 9; i++) {
+			arr[i] = Integer.parseInt(br.readLine());
+		}
+		Comb(0, new int[10], 0);
+	}
+}
+```
+
